--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ lepl
 html5lib
 -e git+git://github.com/RDFLib/pyrdfa3.git#egg=pyrdfa3
 -e git+git://github.com/RDFLib/pymicrodata.git#egg=pyMicrodata
+flask
+flask_celery
