Implemented basic distiller + distiller framework
The distiller supports parsing of:

- Facebook Open Graph Protocol via pyRDFa graph
- Schema.org via pyMicrodata graph
- parsely-page via our custom parser (in auxparsers.py)

Using a nice metaclass and field descriptor, you can implement
a distiller for any strategy you like, specifying field names
and precedence order. You get back nice and simple dictionaries
with all the metadata found for a specified strategy.

Quite pleased with this -- will demo it at our Friday dev hangout!

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 rdflib
 lepl
+html5lib
 -e git+git://github.com/RDFLib/pyrdfa3.git#egg=pyrdfa3
 -e git+git://github.com/RDFLib/pymicrodata.git#egg=pyMicrodata
