fix up some import errors caused by move to virtualenv installation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 rdflib
 lepl
 html5lib
+lxml
 -e git+git://github.com/RDFLib/pyrdfa3.git#egg=pyrdfa3
 -e git+git://github.com/RDFLib/pymicrodata.git#egg=pyMicrodata
