--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ html5lib
 lxml
 -e git+git://github.com/RDFLib/pyrdfa3.git#egg=pyrdfa3
 -e git+git://github.com/RDFLib/pymicrodata.git#egg=pyMicrodata
+
+pytest
